[project]
name = "indexing-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.6.0",
    "haystack-ai>=2.12.0",
    "nltk>=3.9.1",
    "qdrant-client>=1.13.3",
    "sentence-transformers>=4.0.2",
    "tdqm>=0.0.1",
]

[dependency-groups]
dev = [
    "numpy>=2.2.4",
    "pytest>=8.3.5",
]

[tool.pytest.ini_options]
pythonpath = ["."]